modify upload
