# src/main/java/com/example/webapp/rest/ProductController.java
@@ -4,6 +4,8 @@ import com.example.webapp.mapper.ProductMapper;
 import com.example.webapp.model.Product;
 import com.example.webapp.rest.api.ProductApi;
 import com.example.webapp.rest.dto.ProductDto;
+import com.example.webapp.rest.dto.UploadProduct200ResponseDto;
+import com.example.webapp.rest.dto.UploadProductRequestDto;
 import com.example.webapp.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.CacheManager;
@@ -26,6 +28,15 @@ public class ProductController implements ProductApi {
     private ProductService productService;
 
     @Override
+    public ResponseEntity<List<ProductDto>> listProducts() {
+        System.out.println("ProductController.listProducts() called");
+        List<ProductDto> productDtos = productService.getAllProducts().stream()
+                .map(ProductMapper::productToDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(productDtos);
+    }
+
+    @Override
     public ResponseEntity<ProductDto> showProductById(@PathVariable String productId) {
         System.out.println("ProductController.showProductById() called with productId: " + productId);
         Product product = productService.getProductById(productId);
@@ -38,12 +49,23 @@ public class ProductController implements ProductApi {
     }
 
     @Override
-    public ResponseEntity<List<ProductDto>> listProducts() {
-        System.out.println("ProductController.listProducts() called");
-        List<ProductDto> productDtos = productService.getAllProducts().stream()
+    public ResponseEntity<List<ProductDto>> showProductsByCategory(String categoryName) {
+        System.out.println("ProductController.showProductsByCategory() called with categoryName: " + categoryName);
+        List<Product> products = productService.getProductsByCategory(categoryName);
+        List<ProductDto> productDtos = products.stream()
                 .map(ProductMapper::productToDto)
                 .collect(Collectors.toList());
         return ResponseEntity.ok(productDtos);
+    }
+
+    @Override
+    public ResponseEntity<UploadProduct200ResponseDto> uploadProduct(UploadProductRequestDto uploadProductRequestDto) {
+        System.out.println("ProductController.uploadProduct() called with uploadProductRequestDto: " + uploadProductRequestDto);
+        productService.saveProduct(uploadProductRequestDto);
+        UploadProduct200ResponseDto responseDto = new UploadProduct200ResponseDto();
+        responseDto.code(1);
+        responseDto.data("Product uploaded successfully");
+        return ResponseEntity.ok(responseDto);
     }
 
     @RequestMapping(value = "/clearCache", method = RequestMethod.GET)
